<resources>
    <string name="app_name">biodata_show</string>
    <string name="textview1">Name : sanjay pravinbhai kalsariya</string>
    <string name="textview2">MOBILE NUMBER : 9638026213</string>
    <string name="textview3">EMAIL ID : sanjaykalsariya2002@gmail.com</string>
    <string name="textview4">GENDER : Male</string>
    <string name="textview5">PHOTO</string>
    <string name="textview6">DATE OF BIRTH : 13/11/2002</string>
    <string name="textview7">NATIONALITY : India</string>
    <string name="textview8">RELIGION : Hindu</string>
    <string name="textview9">FATHER NAME : pravinbhai</string>
    <string name="textview10">MOTHER NAME : rajuben</string>
    <string name="textview11">LANGUAGES KNOWN : Gujarati , Hindi , English</string>
    <string name="textview12">HOBBIES : Playing kabbadi , problem solving , wathcing movies .</string>
    <string name="textview13">ADDRESS : 176 , sahjanand society-2 , lambe hanuman road surat-395006</string>
    <string name="textview15">EDUCATIONAL BACKGROUND </string>
    <string name="textview19">Bachelor of Engineering in Information technology
L.D.College of Engineering • Ahmedabad, Gujarat
05/2024</string>
    <string name="textview20">Higher Secondary Certificate
Nutan Vidhyapith • Mahuva, Gujarat
05/2020
</string>
    <string name="textview21">Secondary School Certificate
Patanjali Vidhyapith • Surat, Gujarat
05/2018</string>
    <string name="todo">TODO</string>
</resources>