<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints,VisualLintBounds,TextSizeCheck">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/photo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center_horizontal"
                android:text="@string/textview5"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview1"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry,TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview2"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry,TextSizeCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview3"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry,TextSizeCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview4"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview6"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview7"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview8"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview9"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview10"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview11"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview12"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry,TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:paddingStart="@android:dimen/notification_large_icon_height"
                android:paddingLeft="@android:dimen/notification_large_icon_height"
                android:text="@string/textview13"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry,TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:paddingStart="@android:dimen/app_icon_size"
                android:paddingLeft="@android:dimen/app_icon_size"
                android:text="@string/textview15"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:paddingStart="@android:dimen/notification_large_icon_width"
                android:paddingLeft="@android:dimen/notification_large_icon_width"
                android:text="@string/textview19"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="387dp"
                android:layout_height="60dp"
                android:paddingStart="@android:dimen/notification_large_icon_width"
                android:paddingLeft="@android:dimen/notification_large_icon_width"
                android:text="@string/textview20"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,VisualLintBounds" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:paddingStart="@android:dimen/notification_large_icon_width"
                android:paddingLeft="@android:dimen/notification_large_icon_width"
                android:text="@string/textview21"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,VisualLintBounds" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>